# roxy

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
scripts/ML/: .gitignore  dataset_creation.py  model_showcase.ipynb  model_traing-3.ipynb  model_training-2.ipynb  modler_training.ipynb
src/roxy/: __about__.py  __init__.py  motion_discord.py  motion_gemini.py  server.py  test.py
src/roxy/.github/: copilot-instructions.md
